<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="new_tab_menu_button" type="id"/>
    <item name="new_incognito_tab_menu_button" type="id"/>
    <item name="add_to_favourites_menu_button" type="id"/>
    <item name="settings_menu_button" type="id"/>
    <item name="search_on_page_menu_button" type="id"/>
    <item name="download_youtube_video_menu_button" type="id"/>
    <item name="tracker_counter" type="id"/>
    <item name="quit_menu_button" type="id"/>
...
    <item name="go_to_favorites_button" type="id" />
    <item name="react_debug" type="id" />
    <item name="code_scanner" type="id" />
    <item name="reader_mode" type="id" />
    <item name="overflow_menu_list" type="id" />
    <item name="incognito_tab_id" type="id" />
    <item name="regular_tab_id" type="id" />
    <item name="trash_topsites_id" type="id" />
    <item name="background_manager_listener_key" type="id" />
    <item name="background_manager_mode_key" type="id" />
    <item name="favorites_view_parent" type="id" />
    <item name="tabs_manager_button" type="id" />
    <item name="tabs_menu_button" type="id" />
...
