...
        android:background="@color/transparent"
        android:scaleType="fitXY"
        android:visibility="gone"
        tools:visibility="visible"/>

    <FrameLayout
        android:id="@+id/menu_overview"
        android:layout_width="@dimen/toolbar_menu_item_w"
        android:layout_height="@dimen/toolbar_menu_item_h"
        android:background="?attr/actionBarItemBackground">

        <com.cliqz.browser.widget.TabsCounter
            android:id="@+id/open_tabs_count"
            android:layout_width="@dimen/toolbar_menu_icon_w"
            android:layout_height="@dimen/toolbar_menu_icon_h"
            android:layout_gravity="center"
            app:color="@android:color/white" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/overflow_menu"
        android:layout_width="@dimen/toolbar_menu_item_w"
        android:layout_height="@dimen/toolbar_menu_item_h"
        android:layout_marginEnd="@dimen/toolbar_padding"
        android:layout_marginRight="@dimen/toolbar_padding"
        android:background="?attr/actionBarItemBackground">

...
