...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        app:srcCompat="@drawable/forget_tab_icon" />

    <TextView
        android:id="@+id/incognito_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:paddingBottom="15dp"
        android:text="@string/incognito_tab_title"
        android:textColor="@color/toolbar_icon_color_incognito"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <TextView
        android:id="@+id/incognito_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/incognito_tab_description"
        android:textColor="@color/toolbar_icon_color_incognito"
        tools:layout_marginTop="15dp" />
...
